2006-04-01  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	Disable Xprint freetype support momentarily.  Needs ttf2pt1.c, which
	exists in the monolith but has an advertising clause in the license.

	* Xprint/ps/PsFTFonts.c:
	* Xprint/ps/psout_ft.c:
	* Xprint/ps/psout_ftpstype1.c:
	* Xprint/ps/psout_ftpstype3.c:
	Fix some includes to point into X11/fonts/ properly.

	* configure.ac:
	* hw/dmx/dmxextension.c:
	Reorder link order for Xdmx to fix new screensaver variable reference
	properly; remove previous awful hack.

2006-04-01  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_accel.c: (exaCopyWindow):
	* hw/kdrive/ephyr/ephyr_draw.c: (ephyrFinishPipelinedAccess),
	(ephyrUploadToScreen):
	Clean up warnings and a debug printf.

2006-04-01  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa.c: (exaValidateGC):
	Pull out fb's tile handling during fbValidateGC so we can do the
	necessary exaPrepare/FinishAccess()es.  Revealed by xtest with fakexa.

2006-04-01  Adam Jackson  <ajax@freedesktop.org>

	* hw/dmx/dmxextension.c:
	Hack around the new screensaver variable for DMX, which is otherwise
	blissfully ignorant of it.

2006-04-01  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_accel.c: (exaImageGlyphBlt):
	* exa/exa_priv.h:
	* exa/exa_unaccel.c:
	Export exaPrepare/FinishGC to the rest of EXA, and use it in the
	ImageGlyph implementation to avoid unprepared access to the tile.  Also,
	relocate the fbGetDrawable to avoid using a stale dest pointer after
	exaSolidBoxClipped() may have migrated it.  Revealed by xtest.

2006-04-01  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_priv.h:
	Use fb's depth-to-planemask computation, which doesn't suffer from
	getting a 1 planemask at depth 32.  Fixes Get/PutImage xtest tests.

2006-04-01  Daniel Stone  <daniel@freedesktop.org>

	* configure.ac:
	Unconditionally run the XP_USE_FREETYPE AM_CONDITIONAL, not just in
	the Xprint-only path.  Make AC_ARG_ENABLE for freetype and AC_ARG_WITH
	for freetype-config conditional also.